Added Color to the Heading

--- a/html/first.html
+++ b/html/first.html
@@ -4,6 +4,6 @@
     <head>
     </head>
     <body>
-    <h1>---Some Front End logic ,codes,tags,elements---</h1>
+    <h1 style="color: aqua;">---Some Front End logic ,codes,tags,elements---</h1>
     </body>
 </html>
