Added an external css to give styling to the heading

--- a/html/first.html
+++ b/html/first.html
@@ -2,6 +2,7 @@
 <html>
     <title>First HTML Code</title>
     <head>
+        <link rel="stylesheet" href="./first.css">
     </head>
     <body>
     <h1 style="font-family: cursive;">---Some Front End logic ,codes,tags,elements---</h1>
